[Style]: Fix overflow on md and sm screen size

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   top: 0;
   height: 100px;
@@ -12,7 +12,6 @@
 .header__icon {
   object-fit: contain;
   height: 15px;
-  margin-left: 3vw;
 }
 
 .header__center {
@@ -76,4 +75,11 @@
   .header__center {
     max-width: 250px;
   }
+}
+
+.header__menu{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  color:black;
 }
